fix ui covering navbar

--- a/ACWeb/ACWeb/Content/Site.css
+++ b/ACWeb/ACWeb/Content/Site.css
@@ -38,6 +38,7 @@
   text-align: center;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
   width: 100%; height: 50px;
+  z-index: 9999;
 }
 
 .layout #navbar.fixedattop {
